Fix Overlapping Divs

--- a/css/quote-sheet.css
+++ b/css/quote-sheet.css
@@ -1,12 +1,76 @@
 html,
 body {
     overflow-x: hidden;
+    overflow-y: auto;
 }
 
 body {
     position: relative
 }
 
+
+.col-lg-1,
+.col-lg-10,
+.col-lg-11,
+.col-lg-12,
+.col-lg-2,
+.col-lg-3,
+.col-lg-4,
+.col-lg-5,
+.col-lg-6,
+.col-lg-7,
+.col-lg-8,
+.col-lg-9,
+.col-md-1,
+.col-md-10,
+.col-md-11,
+.col-md-12,
+.col-md-2,
+.col-md-3,
+.col-md-4,
+.col-md-5,
+.col-md-6,
+.col-md-7,
+.col-md-8,
+.col-md-9,
+.col-sm-1,
+.col-sm-10,
+.col-sm-11,
+.col-sm-12,
+.col-sm-2,
+.col-sm-3,
+.col-sm-4,
+.col-sm-5,
+.col-sm-6,
+.col-sm-7,
+.col-sm-8,
+.col-sm-9,
+.col-xs-1,
+.col-xs-10,
+.col-xs-11,
+.col-xs-12,
+.col-xs-2,
+.col-xs-3,
+.col-xs-4,
+.col-xs-5,
+.col-xs-6,
+.col-xs-7,
+.col-xs-8,
+.col-xs-9 {
+    display: block;
+}
+
+.display-none {
+    display: none !important;
+}
+
+.display-inline {
+    display: inline !important;
+}
+
+.table {
+    display: table !important;
+}
 
 /* ==================================================
    Default Typography
@@ -74,21 +138,8 @@ label.btn:last-of-type {
 }
 
 .row {
-    display: inline-block;
     width: 100%;
     margin: 0;
-}
-
-.hiddenRow {
-    padding: 0 !important;
-    height: 0px;
-    text-align: left;
-}
-.hiddenRow>div>h4 {
-    text-align: justify;
-    font-size: 1.2em;
-    font-weight: bold;
-    color: #FF6600;
 }
 
 .container {
@@ -156,6 +207,7 @@ td {
 
 .stretch {
     padding: 0px;
+    height: 100%;
 }
 
 .col {
@@ -372,24 +424,40 @@ h2.modal-title {
 }
 
 .vertical-alignment-helper {
-    display:table;
+    display: table;
     height: 100%;
     width: 100%;
-    pointer-events:none; /* This makes sure that we can still click outside of the modal to close it */
+    pointer-events: none;
+    /* This makes sure that we can still click outside of the modal to close it */
 }
+
 .vertical-align-center {
     /* To center vertically */
     display: table-cell;
     vertical-align: middle;
-    pointer-events:none;
+    pointer-events: none;
 }
+
 .modal-content {
     /* Bootstrap sets the size of the modal in the modal-dialog class, we need to inherit it */
-    width:inherit;
-    height:inherit;
+    width: inherit;
+    height: inherit;
     /* To center horizontally */
     margin: 0 auto;
     pointer-events: all;
+}
+
+.hiddenRow {
+    padding: 0 !important;
+    height: 0px;
+    text-align: left;
+}
+
+.hiddenRow>div>h4 {
+    text-align: justify;
+    font-size: 1.2em;
+    font-weight: bold;
+    color: #FF6600;
 }
 
 #notes {
